Changed functionality of directive civics + icons

--- a/localisation/english/zz_evolved_civics_l_english.yml
+++ b/localisation/english/zz_evolved_civics_l_english.yml
@@ -1086,27 +1086,27 @@
  # --------------- Cluster Civics
 	civic_tec_machine_performance_cluster:0 "Performance Clusters"
 	civic_tec_machine_performance_cluster_desc:0 "Originally designed for improving production, this gestalt consciousness has the constant desire and priority on self-improvement and fabrication boosting, making specifically designed drones that manifest, and control it, at a planetary scale."
-	civic_tec_machine_performance_cluster_effects:0 "$tec_tooltip_machine_cluster_civic$\n\n£building£ §YCapital Buildings§! replace their £job_tec_prime_drone£ §Y$job_tec_prime_drone_plural$§! Jobs with £job_tec_prime_performance_drone£ §Y$job_tec_prime_performance_drone_plural$§!.\n£job_maintenance_drone£ §YMaintenance Drones§! boost the production of £job_tec_prime_drone£ §Y$job_tec_prime_drone_plural$§! by §G5%§! each."
+	civic_tec_machine_performance_cluster_effects:0 "$tec_tooltip_machine_cluster_civic$\n\n£building£ §YCapital Buildings§! replace their £job_tec_prime_drone£ §Y$job_tec_prime_drone_plural$§! Jobs with £job_tec_prime_performance_drone£ §Y$job_tec_prime_performance_drone_plural$§!.\n£job_coordinator£ §YCoordinator§! drones will provide §G+2§! extra £mod_country_edict_fund_add£ §YEdict Fund§!\n\n§HRogue servitors§!: £job_bio_trophy£ §YBio-trophies§! provide §G+2§! £mod_country_edict_fund_add£ §YEdict Fund§!."
 
 	# Research - Hypercluster
 	civic_tec_machine_research_cluster:0 "Innovation Clusters"
 	civic_tec_machine_research_cluster_desc:0 "An array of powerful research clusters conform the core of this machine consciousness, making its focus on technological development and constant upgrades to the whole collective."
-	civic_tec_machine_research_cluster_effects:0 "$tec_tooltip_machine_cluster_civic$\n\n£building£ §YCapital Buildings§! replace their £job_tec_prime_drone£ §Y$job_tec_prime_drone_plural$§! Jobs with £job_tec_prime_research_drone£ §Y$job_tec_prime_research_drone_plural$§!.\n- $job_tec_prime_research_drone_effect_desc$\n\n£trigger_tec_research£ §YResearch Drones§! boost the production of £job_tec_prime_drone£ §Y$job_tec_prime_drone_plural$§! by §G5%§! each."
+	civic_tec_machine_research_cluster_effects:0 "$tec_tooltip_machine_cluster_civic$\n\n£building£ §YCapital Buildings§! replace their £job_tec_prime_drone£ §Y$job_tec_prime_drone_plural$§! Jobs with £job_tec_prime_research_drone£ §Y$job_tec_prime_research_drone_plural$§!.\n- $job_tec_prime_research_drone_effect_desc$\n"
 
 	# Maintenance - Reimaginators
 	civic_tec_machine_reimaginator_cluster:0 "Reimagination Clusters"
 	civic_tec_machine_reimaginator_cluster_desc:0 "Each little piece, gear and circuit is the key of the foundation of this machine consciousness, so every design must be perfect; Each assembled part, drone and ship is supervised by specifically designed drones, which not only will ensure the correct working but also will seek any feasible way to improve to the biggest degree possible, keeping the assembly lines and the planet development as streamlined and perfect as computational power can allow."
-	civic_tec_machine_reimaginator_cluster_effects:0 "$tec_tooltip_machine_cluster_civic$\n\n£building£ §YCapital Buildings§! replace their £job_tec_prime_drone£ §Y$job_tec_prime_drone_plural$§! Jobs with £job_tec_prime_reimaginator_drone£ §Y$job_tec_prime_reimaginator_drone_plural$§!, taking also charge of the capital and building £job_roboticist£ §YAssembly§!.\n- $job_tec_prime_reimaginator_drone_effect_desc$\n\n£job_fabricator£ $job_fabricator_plural$ provide §G+0.25%§! £job_roboticist£ §YAssembly speed§!.\n\n§HThis civic restricts the use of Assembly Buildings.\n§HCreating an external source of £pop£ Pop Assembly will make £job_tec_prime_reimaginator_drone£ $job_tec_prime_reimaginator_drone_plural$ increase £job_roboticist£ Assembly speed by a small amount instead§!\n"
+	civic_tec_machine_reimaginator_cluster_effects:0 "$tec_tooltip_machine_cluster_civic$\n\n£building£ §YCapital Buildings§! replace their £job_tec_prime_drone£ §Y$job_tec_prime_drone_plural$§! Jobs with £job_tec_prime_reimaginator_drone£ §Y$job_tec_prime_reimaginator_drone_plural$§!, taking also charge of the capital and building £job_roboticist£ §YAssembly§!.\n- $job_tec_prime_reimaginator_drone_effect_desc$\n§HCreating an external source of £pop£ Pop Assembly will make £job_tec_prime_reimaginator_drone£ $job_tec_prime_reimaginator_drone_plural$ increase £job_roboticist£ Assembly speed by a small amount instead§!\n"
 
 	# Unity - 
 	civic_tec_machine_debugger_cluster:0 "Debugging Clusters"
 	civic_tec_machine_debugger_cluster_desc:0 "Any bug and defective line of code can suppose a extreme danger to the stability and purity of this Machine Intelligence, so a special kind of more capable and precise drone was created to battle, solve and avoid those issues, ensuring a correct development and exponential self improvement."
-	civic_tec_machine_debugger_cluster_effects:0 "$tec_tooltip_machine_cluster_civic$\n\n£building£ §YCapital Buildings§! replace their £job_tec_prime_drone£ §Y$job_tec_prime_drone_plural$§! Jobs with £job_tec_prime_debugger_drone£ §Y$job_tec_prime_debugger_drone_plural$§!.\n- $job_tec_prime_debugger_drone_effect_desc$\n\n£unity£ §YUnity Jobs§! boost the production of £job_tec_prime_drone£ §Y$job_tec_prime_drone_plural$§! by §G5%§! each."
+	civic_tec_machine_debugger_cluster_effects:0 "$tec_tooltip_machine_cluster_civic$\n\n£building£ §YCapital Buildings§! replace their £job_tec_prime_drone£ §Y$job_tec_prime_drone_plural$§! Jobs with £job_tec_prime_debugger_drone£ §Y$job_tec_prime_debugger_drone_plural$§!.\n- $job_tec_prime_debugger_drone_effect_desc$\n$tec_loc_amenities_gestalt$ from £job_coordinator£ Coordinators: §G+1§!"
 
 	# Armies - Megaform
 	civic_tec_machine_warform_cluster:0 "Warform Clusters"
 	civic_tec_machine_warform_cluster_desc:0 "The need of security, defense and a proper outpost development required the invention of more solid lines of defense, in this case a new kind of drone capable of not only maintaining structures and making specific tasks, but also having the firepower and defensive capacities that would ensure the safety of lesser drone units."
-	civic_tec_machine_warform_cluster_effects:0 "$tec_tooltip_machine_cluster_civic$\n\n£building£ §YCapital Buildings§! replace their £job_tec_prime_drone£ §Y$job_tec_prime_drone_plural$§! Jobs with £job_tec_prime_warform_drone£ §Y$job_tec_prime_warform_drone_plural$§!.\n- $job_tec_prime_warform_drone_effect_desc$\n\n£job_soldier£ §YMilitary Jobs§! boost the production of £job_tec_prime_drone£ §Y$job_tec_prime_drone_plural$§! by §G5%§! each, and provide §G2§! extra £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§!."
+	civic_tec_machine_warform_cluster_effects:0 "$tec_tooltip_machine_cluster_civic$\n\n£building£ §YCapital Buildings§! replace their £job_tec_prime_drone£ §Y$job_tec_prime_drone_plural$§! Jobs with £job_tec_prime_warform_drone£ §Y$job_tec_prime_warform_drone_plural$§!.\n- $job_tec_prime_warform_drone_effect_desc$\n\n£job_soldier£ §YMilitary Jobs§! provide §G2§! extra £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§!."
 
 	#New - adquisition - production change based on the planet type
 	civic_tec_machine_acquisition_cluster:0 "Acquisition Clusters"
@@ -1137,13 +1137,13 @@
  # --------------- Directive civics
 	#Stability and output
 	civic_tec_machine_prime_directive:0 "Prime Directive"
-	civic_tec_machine_prime_directive_desc:0 "This Machine Empire relies most of the administrative and productive tasks on semi-autonomous planetary drones, carefully designed with the state of the art technologies and with an unmatched programation for serving the empire interests."
-	civic_tec_machine_prime_directive_effects:0 "$tec_tooltip_machine_directive_civic$\n\n£job_tec_prime_drone£ Prime Drones of any class provide §G2§! additional £stability£ §YStability§! and increase £job£ §YDrone Output§! by §G1.5%§! per $tec_loc_capital_tier$."
+	civic_tec_machine_prime_directive_desc:0 "It is mandatory to ensure the semi-autonomous planetary drones work at the maximum efficiency, cared and maintained with the gestalt consciousness state of the art technologies and with an unmatched programation for serving its."
+	civic_tec_machine_prime_directive_effects:0 "$tec_tooltip_machine_directive_civic$\n\n£job_tec_prime_drone£ Prime Drones of any class provide §G2§! additional £stability£ §YStability§! and increase £job£ §YDrone Output§! by §G1.5%§! per $tec_loc_capital_tier$.\n£job_maintenance_drone£ §YMaintenance Drones§! boost the production of £job_tec_prime_drone£ §Y$job_tec_prime_drone_plural$§! by §G5%§! each."
 
 	# Unity
 	civic_tec_machine_alpha_directive:0 "Alpha Directive"
-	civic_tec_machine_alpha_directive_desc:0 "TO DO"
-	civic_tec_machine_alpha_directive_effects:0 "$tec_tooltip_machine_directive_civic$\n\n£job_tec_prime_drone£ Prime Drones of any class produce additional £unity£ §YUnity§!, and amplify the planet output of £unity£ §YUnity§! by §G2.5%§!, per $tec_loc_capital_tier$\n"
+	civic_tec_machine_alpha_directive_desc:0 "A cohesive collective will thrive, one that doesn't follow its proper commands and work at unity will only be prone to disarray and lack of performance."
+	civic_tec_machine_alpha_directive_effects:0 "$tec_tooltip_machine_directive_civic$\n\n£job_tec_prime_drone£ Prime Drones of any class produce additional £unity£ §YUnity§!, and amplify the planet output of £unity£ §YUnity§! by §G2.5%§!, per $tec_loc_capital_tier$\n£unity£ §YUnity Jobs§! boost the production of £job_tec_prime_drone£ §Y$job_tec_prime_drone_plural$§! by §G5%§! each."
 	# \n\n§HTranscendental Ascent§!: The extra £unity£ §YUnity§! output is applied instead to £job_priest£ §YAscendant§! drones.\n
 
 	# Decryption
@@ -1153,8 +1153,8 @@
 
 	# Production
 	civic_tec_machine_epsilon_directive:0 "Epsilon Directive"
-	civic_tec_machine_epsilon_directive_desc:0 "TO DO"
-	civic_tec_machine_epsilon_directive_effects:0 "$tec_tooltip_machine_directive_civic$\n\n£job_tec_prime_drone£ Prime Drones of any class produce additional £alloys£ §YAlloys§!, and amplify the planet output of £alloys£ §YAlloys§! by §G2.5%§!, per $tec_loc_capital_tier$\n"
+	civic_tec_machine_epsilon_directive_desc:0 "Industrial tasks are a priority, a main control focus whose the higher assigned drones must oversee and control for a more efficient development of colonies and the empire as a whole."
+	civic_tec_machine_epsilon_directive_effects:0 "$tec_tooltip_machine_directive_civic$\n\n£job_tec_prime_drone£ Prime Drones of any class produce additional £alloys£ §YAlloys§!, and amplify the planet output of £alloys£ §YAlloys§! by §G2.5%§!, per $tec_loc_capital_tier$\n£job_fabricator£ $job_fabricator_plural$ provide §G+0.25%§! £job_roboticist£ §YAssembly speed§!.\n\n§HThis civic restricts the use of Assembly Buildings."
 
 	# Decryption
 	civic_tec_machine_zeta_directive:0 "Zeta Directive"
@@ -1168,8 +1168,8 @@
 
 	# Research
 	civic_tec_machine_lambda_directive:0 "Lambda Directive"
-	civic_tec_machine_lambda_directive_desc:0 "TO DO"
-	civic_tec_machine_lambda_directive_effects:0 "$tec_tooltip_machine_directive_civic$\n\n£job_tec_prime_drone£ Prime Drones of any class produce additional £trigger_tec_research£ §YResearch§!, and amplify the planet output of §Y$tec_loc_research_resources$§! by §G2.5%§!, per $tec_loc_capital_tier$\n"
+	civic_tec_machine_lambda_directive_desc:0 "Iterative processes of discovery, catalogation, trial and error must be properly organised, controlled and sorted by semi autonomous entities to ensure less sophisticated drones continue with a proper stable development."
+	civic_tec_machine_lambda_directive_effects:0 "$tec_tooltip_machine_directive_civic$\n\n£job_tec_prime_drone£ Prime Drones of any class produce additional £trigger_tec_research£ §YResearch§!, and amplify the planet output of §Y$tec_loc_research_resources$§! by §G2.5%§!, per $tec_loc_capital_tier$\n£trigger_tec_research£ §YResearch Drones§! boost the production of £job_tec_prime_drone£ §Y$job_tec_prime_drone_plural$§! by §G5%§! each."
 	#\n\n§HInput Iterators§!: The extra job §Y$tec_loc_research_resources$§! output is added to the rate of §YIteration§! instead, at a local scale.
 
 	# ?
@@ -1189,7 +1189,7 @@
 
 	civic_tec_machine_omega_directive:0 "Omega Directive"
 	civic_tec_machine_omega_directive_desc:0 "TO DO "
-	civic_tec_machine_omega_directive_effects:0 "$tec_tooltip_machine_directive_civic$\n\n£job_tec_prime_drone£ Prime Drones of any class provide additional £mod_country_admin_cap_add£ §Y$MOD_COUNTRY_ADMIN_CAP_ADD$§! per $tec_loc_capital_tier$.\n£job_coordinator£ §YCoordinator§! drones will provide §G+2§! extra £mod_country_edict_fund_add£ §YEdict Fund§!\n\n§HRogue servitors§!: £job_bio_trophy£ §YBio-trophies§! provide §G+2§! £mod_country_edict_fund_add£ §YEdict Fund§!.\n"
+	civic_tec_machine_omega_directive_effects:0 "$tec_tooltip_machine_directive_civic$\n\n£job_tec_prime_drone£ Prime Drones of any class provide additional £mod_country_admin_cap_add£ §Y$MOD_COUNTRY_ADMIN_CAP_ADD$§! per $tec_loc_capital_tier$.\nTO DO"
  # /
 
 # Machine Mechanic Civics
