removed medical policy + added texts

--- a/localisation/english/zz_evolved_ethics_authorities_l_english.yml
+++ b/localisation/english/zz_evolved_ethics_authorities_l_english.yml
@@ -55,7 +55,10 @@
 
  AUTH_MACHINE_DISTRICT_BONUS:0 "§EDistrict Bonus:§! Each §H£district£ Menial District§! provides §H1 extra £housing£ Housing§!\n\n"
 
- AUTH_MACHINE_PRODUCTIVE_BONUS:0 "§EMechanic Bonus:§! Can create §HSpecialized £building£ Capitals§! on regular worlds, which allows fully §HAutomated§! menial planets or §HCentralized§! colonies with boosted Complex Drone output.\n\n"
+ AUTH_MACHINE_PRODUCTIVE_BONUS:0 "§EMechanic Bonus:§! Capitals provide a £job_tec_prime_drone£ §H$job_tec_prime_drone$§!, which scales with the planet development.\nCan create §HSpecialized £building£ Capitals§! on regular worlds, which allows fully §HAutomated§! menial planets or §HCentralized§! colonies with boosted Complex Drone output.\n\n"
+
+ AUTH_MACHINE_TEC_PROCESSCAP:0 "Drones produce and consume £sr_tec_machine_processing_empire£ §Y$sr_tec_machine_processing_empire$§!; a lack of enough $sr_tec_machine_processing_empire$ will result in §YNegative Output§!, while an excess can be used via §HPolicies§! and §HEdicts§!, or to greatly boost a colony production if §HRedirected§!."
+
 
 #OLD AUTH_MACHINE_DISTRICT_BONUS:0 "§EDistrict Bonus:§! Each 2 menial £district£ districts of the same category will §Hprovide 1 extra £housing£ Housing§!.\n\n"
 
