Fixed MSI species clases facepalm+fctn mis bracket

--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -19,7 +19,7 @@
 # §Y thisisyellow §!
 
 # --------------------------- MAINSCREEN -------------------------------- #DATE DATE DATE DATE
- TEC_EVOLVED_VERSION:0 "Evolved Version: v0.9R5 (§Y22-03-2023§!)"
+ TEC_EVOLVED_VERSION:0 "Evolved Version: v0.9R5 HOTFIX I (§Y23-03-2023§!)"
  TEC_EVOLVED_TOOLTIP:0 "§E$TEC_EVOLVED_TITLE$§!\n§Y$TEC_EVOLVED_STEAMLINK$§!\n$TEC_EVOLVED_REPORTS$\n\n$TEC_EVOLVED_DONATIONS$"
  TEC_EVOLVED_TITLE:0 "Stellaris Evolved"
  TEC_EVOLVED_STEAMLINK:0 "Clicking this item will open the mod Steam Workshop page"
