Civics standardization using inlines

--- a/localisation/english/zz_evolved_civics_l_english.yml
+++ b/localisation/english/zz_evolved_civics_l_english.yml
@@ -1593,8 +1593,8 @@
  civic_tooltip_fanatic_industrial_or_green:0 "Is §Y$ethic_fanatic_industrial$§! or §Y$ethic_fanatic_green$§!"
  civic_tooltip_industrial_or_materialist:0 "Is some degree of §Y$ethic_industrial$§! or §YMaterialist§!"
 
- civic_tooltip_socialism_or_pluralist:0 "Is some degree of §Y$ethic_capitalism$§! or §Y$ethic_pluralist$§!"
- civic_tooltip_capitalist_or_elitist:0 "Is some degree of §Y$ethic_capitalism$§! or §Y$ethic_elitist$§!"
+ civic_tooltip_socialism_or_pluralist:0 "Is some degree of §Y$ethic_socialism§! or §Y$ethic_pluralist$§!"
+ civic_tooltip_capitalism_or_elitist:0 "Is some degree of §Y$ethic_capitalism$§! or §Y$ethic_elitist$§!"
 
  civic_tooltip_not_industrial_or_overconsumption:0 "Is not §Y$ethic_industrial$§! or §YOverconsuming§! Gestalt"
  civic_tooltip_green_or_gestalt:0 "Is some degree of §Y$ethic_green$§! or is a §YGestalt consciousness§!"
