Smol name fixes

--- a/localisation/english/zz_evolved_ethics_authorities_l_english.yml
+++ b/localisation/english/zz_evolved_ethics_authorities_l_english.yml
@@ -10,7 +10,7 @@
  auth_tec_theocracy:0 "Theocracy"
  auth_tec_theocracy_desc:0 "Belief and administration united, this kind of government commands in the name of the divinity; the maximum authority is recognized as the direct manifestation of a deity."
 
- auth_tec_patrocorporate:0 "Patrimonial Corporate"
+ auth_tec_patrocorporate:0 "Patrimonial Corporation"
  auth_tec_patrocorporate_desc:0 "This kind of government is controlled by a massive commercial enterprise, owned by a family with a established line of succession mainly composed of the principal shareholder offspring, that has completely supplanted the role of the state."
 
  auth_tec_ai:0 "AI Administration"
