Fixed some smol issues for .4 patch

--- a/localisation/english/zz_evolved_civics_l_english.yml
+++ b/localisation/english/zz_evolved_civics_l_english.yml
@@ -1154,7 +1154,7 @@
 	# Production
 	civic_tec_machine_epsilon_directive:0 "Epsilon Directive"
 	civic_tec_machine_epsilon_directive_desc:0 "Industrial tasks are a priority, a main control focus whose the higher assigned drones must oversee and control for a more efficient development of colonies and the empire as a whole."
-	civic_tec_machine_epsilon_directive_effects:0 "$tec_tooltip_machine_directive_civic$\n\n£job_tec_prime_drone£ Prime Drones of any class produce additional £alloys£ §YAlloys§!, and amplify the planet output of £alloys£ §YAlloys§! by §G2.5%§!, per $tec_loc_capital_tier$\n£job_fabricator£ $job_fabricator_plural$ provide §G+0.25%§! £job_roboticist£ §YAssembly speed§!.\n\n§HThis civic restricts the use of Assembly Buildings."
+	civic_tec_machine_epsilon_directive_effects:0 "$tec_tooltip_machine_directive_civic$\n\n£job_tec_prime_drone£ Prime Drones of any class produce additional £alloys£ §YAlloys§!, and amplify the planet output of £alloys£ §YAlloys§! by §G2.5%§!, per $tec_loc_capital_tier$\n£job_fabricator£ $job_fabricator_plural$ provide §G+0.25%§! £job_roboticist£ §YAssembly speed§!.\n\n§HThis civic restricts the use of Assembly Buildings.§!"
 
 	# Decryption
 	civic_tec_machine_zeta_directive:0 "Zeta Directive"
