Added the hoarder civics basic mechanics

--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -945,6 +945,32 @@ tec_jump_empty:0 "\n\n"
  MESSAGE_TEC_SPLICED_POPS_TITLE:0 "Pops Spliced"
  MESSAGE_TEC_SPLICED_POPS:1 "We have spliced the genes of $VALUE|Y$ £pops£ Pops to be the same of our species on $PLANET|Y$."
 
+# ------------------------------------------------- Hoarders
+ tec_minerals_stockpile_loc: "\n$tec_loc_minerals$: [This.tec_minerals_stockpile]"
+ tec_food_stockpile_loc: "\n$tec_loc_food$: [This.tec_food_stockpile]"
+ tec_alloys_stockpile_loc: "\n$tec_loc_alloys$: [This.tec_alloys_stockpile]"
+ tec_consumer_goods_stockpile_loc: "\n$tec_loc_consumer_goods$: [This.tec_consumer_goods_stockpile]"
+ tec_rare_crystals_stockpile_loc: "\n$tec_loc_rare_crystals$: [This.tec_rare_crystals_stockpile]"
+ tec_exotic_gases_stockpile_loc: "\n$tec_loc_exotic_gases$: [This.tec_exotic_gases_stockpile]"
+ tec_volatile_motes_stockpile_loc: "\n$tec_loc_volatile_motes$: [This.tec_volatile_motes_stockpile]"
+ 
+
+ building_tec_vault_of_plenty: "Vault of Plenty"
+ building_tec_vault_of_plenty_desc: "A massive storage facility that can hold vast quantities of surplus resources, including food, minerals, advanced technologies, and strategic resources. It is a testament to the ingenuity and resourcefulness of its builders, who have developed advanced storage and preservation techniques to ensure the stability and prosperity of their civilization, and safe storage."
+ building_tec_vault_of_plenty_effect_desc: "\nStockpiled Resources:[tec_minerals_stockpile_loc][tec_food_stockpile_loc][tec_alloys_stockpile_loc][tec_consumer_goods_stockpile_loc][tec_rare_crystals_stockpile_loc][tec_exotic_gases_stockpile_loc][tec_volatile_motes_stockpile_loc]"
+
+ building_tec_vault_of_acquisition: "Vault of Acquisition"
+ building_tec_vault_of_acquisition_desc: "A section of the Vault of Plenty dedicated to reinvestment and smart utilization of resources for the purpose of creating more material wealth."
+ building_tec_vault_of_acquisition_effect_desc: "This £building£ §YBuilding§! generates a trickle of resources depending on the stockiple of resources present in the Vault of Plenty"
+
+ building_tec_vault_of_unity: "Vault of Unity"
+ building_tec_vault_of_unity_desc: "A grandiose section of the Vault of Plenty that houses a treasure trove of opulent artifacts, ranging from rare works of art to intricate musical instruments and other expressions of cultural wealth. It is a testament to the lavish tastes and indulgences of its builders, who have spared no expense in gathering and preserving the finest and most exquisite examples of their civilization's cultural heritage."
+ building_tec_vault_of_unity_effect_desc: "This £building£ §YBuilding§! generates §Y$tec_loc_unity$§! depending on the stockiple of resources present in the Vault of Plenty"
+
+ building_tec_vault_of_wealth: "Vault of Wealth"
+ building_tec_vault_of_wealth_desc: "A section of the Vault of Plenty that houses a state-of-the-art trading hub that enables its owners to maximize the value of their vast material resources. Equipped with advanced market analysis tools and cutting-edge trading algorithms, it can identify the most profitable trade deals and exchanges in real-time, ensuring that its owners get the best possible returns on their investments."
+ building_tec_vault_of_wealth_effect_desc: "This £building£ §YBuilding§! generates §Y$tec_loc_trade_value$§! depending on the stockiple of resources present in the Vault of Plenty"
+
 # ----- Corpo civics
 
 # ------------------------------------------------- BankCorp
@@ -3724,6 +3750,8 @@ mod_tec_planet_pop_assembly_add_per_pop:0 "Monthly Mechanical Pop Assembly per P
 # Pop Upkeeps
 
 mod_tec_pop_upkeep_base_add:0 "Base £pop£ Pop Upkeep"
+
+
 
 # Admin locs
 
