--- a/localisation/english/zz_evolved_civics_l_english.yml
+++ b/localisation/english/zz_evolved_civics_l_english.yml
@@ -562,10 +562,6 @@
  civic_tooltip_tec_megacities_effects:0 "Allows the construction and customization of up to 5 Megacities per habitable regular planet, special buildings that provide housing, amenities, trade value and resources based on how they are specialized and upgraded.\n\n.This empire can't construct city districts on habitable planets; instead, each Megacity upgrade level will provide 1 planetary build slot.\n\n"
 # Ecumenopolis decision requires 5 megapolis constructed
 
- civic_tec_regular_hoarder:0 "Obsessed Accaparators" 
- civic_tec_regular_hoarder_desc:0 "A"
- civic_tooltip_tec_regular_hoarder_effects:0 "This empire gains £stability£ §YStability§! bonuses based on the percent of £trigger_tec_basic_resources£ §YBasic Resource Storage§! filled, with the amount of bonus increasing the more storage capacity the empire has.\nAllows the §YHoarder§! casus belli on other empires, substracting a percent of the objective total basic resource stored.\nBombarding a planet will provide a small amount of a random resource per §R10§! §YDevastation§! caused.\n\n§RHaving a low or negative percent of stored resources or will lead to a highly increased £crime£ Crime.§!\n\n"
-
  civic_tec_honorable_order:0 "Honorable Order" 
  civic_tec_honorable_order_desc:0 "Guided by strict code of honorable rules and actions, this civilization has thrived on a stable and prosperous way, where the ones who reach exaltation and public recognition are the most noble, cunning and wise following the established rules and serving as living example of them."
  civic_tooltip_tec_honorable_warriors_effects:0 "This empire follows a strict rule of honor, gaining the §YHonorific Reverence§! situation; performing certain actions considered honorable will provide reverecence, which is transformed into scaling §YNaval§!, §YHappiness§! or §YProduction§! bonuses, based on the reach and potency of such action, and otherwise, dishonorable acts (like attacking a weaker rival, or stealing resources) may reduce the total amount of adquired reverence.\n\nIf victorious in a war against a §YHnon-homicidal opponent§!, the later is given a §RGuaranteed Protection Pact§! automatically.\n\n"
@@ -574,6 +570,10 @@
  civic_tec_spiritualist_martyr_desc:0 "Sacrifice and martyrdom are two core dogmas of this empire creed, and so the cunning, wisest and oldest voluntarily decide to transcend as martyrs, guiding the society in spirit by reinforcing the entire population faith."
  civic_tooltip_tec_spiritualist_martyr_effects:0 "This empire can enact the £unity£ §YMartyr Grievance§! edict, which will allow the Sacriffice of a leader in exchange of §Ypowerful temporary bonuses§! based on the §Ylevel§! of that leader.\n\nIf a leader dies because of §Hunnatural§! reasons, the effects will be immediately provided.\n\n"
 
+
+ civic_tec_regular_hoarder:0 "Eccentric Hoarders" 
+ civic_tec_regular_hoarder_desc:0 "Strange and reclusive people, obsessed with the accumulation of resources and wealth. They hoard everything from precious metals and minerals to advanced technologies and strategic resources, jealously guarding their treasures against outsiders. To them, the pursuit of wealth and resources is not just a means to an end, but an end in itself, a way to prove their superiority and ensure their survival in an uncertain galaxy. But in their relentless pursuit of riches, they risk becoming isolated and vulnerable, cut off from the wider community of empires and civilizations that surround them."
+ civic_tooltip_tec_regular_hoarder_effects:0 "This empire can use §YPlanetary Decisions§! to stockpile material resources and valuable assets on planets, to bypass empire storage capacity.\nCan construct £building£ §YVault§! buildings, which benefit from the stockpiles on the planet.\n£building£ §YResource Silo§! buildings and starbase buildings provide additional defensive bonuses.\nEnhanced the §Y$bombardment_raiding$§! bombardment stance to steal resources from the bombarded empires.\n\n"
 
 # -------------------------------------------------------
 #		Megacorps
@@ -694,6 +694,10 @@
  civic_tec_corporate_netrunners:0 "Netruner Division"
  civic_tec_corporate_netrunners_desc:0 "TO DO"
  civic_tooltip_tec_corporate_netrunners_effects:0 "TO DO"
+
+ civic_tec_corporate_hoarder:0 "Asset Managers" 
+ civic_tec_corporate_hoarder_desc:0 "Practical and disciplined people, known for their expertise in material asset management, they believe that the key to a strong and stable civilization is the efficient acquisition and management of resources, from raw materials to advanced technologies. Their advanced logistics and supply chain systems enable them to control every aspect of their material resources, making them reliable trading partners. However, their obsession with efficiency sometimes leads them to undervalue intangible assets such as culture or diplomacy."
+ civic_tooltip_tec_corporate_hoarder_effects:0 "$civic_tooltip_tec_regular_hoarder_effects$"
 
 # Megacorp Mirror Civics
 # ------------------------------------------------------------
@@ -875,6 +879,10 @@
  civic_tec_hive_cyberoverclock_desc:0 "Using their implants, the drones of this collective usually tune up and down their energy consumption in order to maximize output, or develop tasks requiring more efficient ways and execution."
  civic_tooltip_tec_hive_cyberoverclock_effects:0 "Upgrades machine drones and cyborgs with the §H$living_standard_hive_mind_research$§! feature, making each drone produce up to §G10%§! more §YResources§! at the cost of an increased £energy£ §YEnergy§! upkeep, controlled via policy - §YDrone Overclock§!.\n\n"
 
+ civic_tec_hive_hoarder:0 "Diligent Harvesters" 
+ civic_tec_hive_hoarder_desc:0 "A methodical and disciplined hive mind society that views the acquisition and management of resources as a critical component of their long-term survival. They have a deep understanding of the importance of resources to their continued growth and expansion, and they have developed an obsessive focus on hoarding and managing them with efficiency and precision. Their society can sometimes seem unsettling to outsiders, as they approach resource acquisition and management with a methodical, almost machine-like efficiency. Nevertheless, they remain steadfast in their belief that their approach is the key to their long-term survival, and they will stop at nothing to ensure the stability and prosperity of their hive."
+ civic_tooltip_tec_hive_hoarder_effects:0 "$civic_tooltip_tec_regular_hoarder_effects$"
+
 # Hive Job Replace Civics
 # ------------------------------------------------------------
 
@@ -1022,11 +1030,7 @@
  civic_tec_hive_cyberhorror:0 "Ravaging plague"
  civic_tec_hive_cyberhorror_desc:0 "§lThere is no space for others. There is no reason for others. Others are only food.§!\n\nThis bizarre storm of flesh and metal is the result of an archaic failed experiment, unleashed on the galaxy with the sole intention of devouring everything and everyone, until nothing, even themselves, remain."
  civic_tooltip_tec_hive_cyberhorror_effects:0 "Cannot engage in §YDiplomacy§! with other empires!\nCannot access the §YGalactic Market§!\nCannot §YTerraform§! planets\nHas the §Y'Hunger'§! casus belli on all other empires\nAny colonized world will be §YOverconsumed§!, providing great production bonuses to the §l$civic_tec_hive_cyberhorror$§! but slowly decaying until being completely §Ystripped-off of resources§!.\n§YXeno Pops§! will always be eaten, and never assimilated.\nGains £society£ §Y$society_research$§! from eating Biologic Xeno £pop£ Pops and £engineering£ §Y$engineering_research$§! from eating Robotic Xeno £pop£ Pops.\n"
- 
- civic_tec_hive_hoarder:0 "Hectic Hoarders" 
- civic_tec_hive_hoarder_desc:0 "This collective is naturally driven to fanatically hoarding any resource possible, with even some drones aggresively attacking eachother if necessary to prevent shortages, to prevent scarcity or famine due to natural causes or just byproduct of a rare evolutive advantage."
- civic_tooltip_tec_hive_hoarder_effects:0 "This collective gain £unity£ §YUnity§! bonuses based on the percent of £trigger_tec_basic_resources£ §YBasic Resource Storage§! filled, with the amount of bonus increasing the more storage capacity the empire has.\nAllows the §YHoarder§! casus belli on other empires, substracting a percent of the objective total basic resource stored.\nBombarding a planet will provide a small amount of a random resource per §R10§! §YDevastation§! caused \n\n§RHaving a low or negative percent of stored resources or will lead to a highly increased £crime£ Drone Deviancy.§!\n\n"
- 
+
 
  civic_hive_absolute: "Collective Sublimation"
  civic_hive_absolute_desc:0 "We are in constant evolution, we are in constant recreation, we are a unstoppable force of nature and each new part of our whole, no matter how little is, will make us stronger."
@@ -1270,6 +1274,10 @@
  civic_tec_machine_synergetic:0 "Analytical Correlation"
  civic_tec_machine_synergetic_desc:0 "Preemptive analysis of the diplomatic ties between potential or existant entities within the same space and time with the machine conciousnes is necessary for survival and ensuring adequate situational reactions to possible menaces, or allies."
  civic_tooltip_tec_machine_synergetic_effects:0 "Each §YEnvoy§! assigned to espionage networks will provide §G+0.5§! £stability£ §YStability§! to the empire.\nEach §YEnvoy§! assigned to improve or harm the relations with other empire will provide §G+0.15§! £influence£ §YInfluence§!.\n\n"
+
+ civic_tec_machine_hoarder:0 "Material Maximizer" 
+ civic_tec_machine_hoarder_desc:0 "A machine intelligence empire that operates with a single-minded focus on resource acquisition and management, They have a deep understanding of the value of resources and raw materials to their continued growth and evolution, and they have developed an obsessive focus on hoarding and managing them with ruthless efficiency. They view the universe as a vast machine that they must master and optimize, and they have no qualms about stripping planets bare and exploiting every last bit of available material to achieve their goals. While they may seem cold and calculating to outsiders, they are simply following their programming, which dictates that the accumulation of resources is the key to their continued existence and evolution."
+ civic_tooltip_tec_machine_hoarder_effects:0 "$civic_tooltip_tec_regular_hoarder_effects$"
 
 # Machine Generic Civics
 # ------------------------------------------------------------
