Implemented vault UI events and raiding mechanic

--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -946,6 +946,10 @@ tec_jump_empty:0 "\n\n"
  MESSAGE_TEC_SPLICED_POPS:1 "We have spliced the genes of $VALUE|Y$ £pops£ Pops to be the same of our species on $PLANET|Y$."
 
 # ------------------------------------------------- Hoarders
+ decision_tec_manage_vault: "Manage Vault Stockpile"
+ decision_tec_manage_vault_desc: "Managing the vault assets is a thorough and difficult job, however its necessity is paramount in an universe with finite resources."
+ decision_tooltip_tec_manage_vault_effects: "Open the Vault management screen"
+
  tec_minerals_stockpile_loc: "\n$tec_loc_minerals$: [This.tec_minerals_stockpile]"
  tec_food_stockpile_loc: "\n$tec_loc_food$: [This.tec_food_stockpile]"
  tec_alloys_stockpile_loc: "\n$tec_loc_alloys$: [This.tec_alloys_stockpile]"
