minor artifact fixes and inlines for silo effects

--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -957,11 +957,12 @@ tec_jump_empty:0 "\n\n"
  tec_rare_crystals_stockpile_loc: "\n$tec_loc_rare_crystals$: [This.tec_rare_crystals_stockpile]"
  tec_exotic_gases_stockpile_loc: "\n$tec_loc_exotic_gases$: [This.tec_exotic_gases_stockpile]"
  tec_volatile_motes_stockpile_loc: "\n$tec_loc_volatile_motes$: [This.tec_volatile_motes_stockpile]"
+ tec_minor_artifacts_stockpile_loc: "\n$tec_loc_minor_artifacts$: [This.tec_minor_artifacts_stockpile]"
  
 
  building_tec_vault_of_plenty: "Vault of Plenty"
  building_tec_vault_of_plenty_desc: "A massive storage facility that can hold vast quantities of surplus resources, including food, minerals, advanced technologies, and strategic resources. It is a testament to the ingenuity and resourcefulness of its builders, who have developed advanced storage and preservation techniques to ensure the stability and prosperity of their civilization, and safe storage."
- building_tec_vault_of_plenty_effect_desc: "\nStockpiled Resources:[tec_minerals_stockpile_loc][tec_food_stockpile_loc][tec_alloys_stockpile_loc][tec_consumer_goods_stockpile_loc][tec_rare_crystals_stockpile_loc][tec_exotic_gases_stockpile_loc][tec_volatile_motes_stockpile_loc]"
+ building_tec_vault_of_plenty_effect_desc: "\nStockpiled Resources:[tec_minerals_stockpile_loc][tec_food_stockpile_loc][tec_alloys_stockpile_loc][tec_consumer_goods_stockpile_loc][tec_rare_crystals_stockpile_loc][tec_exotic_gases_stockpile_loc][tec_volatile_motes_stockpile_loc][tec_minor_artifacts_stockpile_loc]"
 
  building_tec_vault_of_acquisition: "Vault of Acquisition"
  building_tec_vault_of_acquisition_desc: "A section of the Vault of Plenty dedicated to reinvestment and smart utilization of resources for the purpose of creating more material wealth."
