--- a/localisation/english/zz_evolved_events_lore_l_english.yml
+++ b/localisation/english/zz_evolved_events_lore_l_english.yml
@@ -870,7 +870,7 @@ tec_origin.122.a.tooltip:0 "The location of a suitable system is revealed, colon
 # Hoarders
 
  tec_hoarders.1.title: "Vault of Plenty"
- tec_hoarders.1.desc: "Currently the vault stockpiles the following resources:\n\n[tec_minerals_stockpile_loc][tec_food_stockpile_loc][tec_alloys_stockpile_loc][tec_consumer_goods_stockpile_loc][tec_rare_crystals_stockpile_loc][tec_exotic_gases_stockpile_loc][tec_volatile_motes_stockpile_loc]"
+ tec_hoarders.1.desc: "Currently the vault stockpiles the following resources:\n\n[tec_minerals_stockpile_loc][tec_food_stockpile_loc][tec_alloys_stockpile_loc][tec_consumer_goods_stockpile_loc][tec_rare_crystals_stockpile_loc][tec_exotic_gases_stockpile_loc][tec_volatile_motes_stockpile_loc][tec_minor_artifacts_stockpile_loc]"
 
  tec_hoarders.1.minerals: "Manage $tec_loc_minerals$"
  tec_hoarders.1.food: "Manage $tec_loc_food$"
@@ -879,6 +879,7 @@ tec_origin.122.a.tooltip:0 "The location of a suitable system is revealed, colon
  tec_hoarders.1.rare_crystals: "Manage $tec_loc_rare_crystals$"
  tec_hoarders.1.exotic_gases: "Manage $tec_loc_exotic_gases$"
  tec_hoarders.1.volatile_motes: "Manage $tec_loc_volatile_motes$"
+ tec_hoarders.1.minor_artifacts: "Manage $tec_loc_minor_artifacts$"
  tec_hoarders.1.exit: "Exit Vault of Plenty"
 
  tec_hoarders.2.title: "Manage [tec_vault_managed_resource]"
