--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -47,6 +47,7 @@
  tec_loc_rare_crystals:0 "£rare_crystals£ $rare_crystals$"
  tec_loc_exotic_gases:0 "£exotic_gases£ $exotic_gases$"
  tec_loc_volatile_motes:0 "£volatile_motes£ $volatile_motes$"
+ tec_loc_minor_artifacts:0 "£minor_artifacts£ $minor_artifacts$"
 
  # Fake resource locs
  tec_loc_amenities: "£amenities£ $PLANET_AMENITIES_TITLE$"
